--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
-Hello World!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Ayush Singh</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <nav>
+      <div class="logo">MyPortfolio</div>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+  <section id="home">
+    <div class="intro">
+      <h1>Hello, I'm <span class="typing"></span></h1>
+      <p>A Passionate Backend Developer</p>
+    </div>
+  </section>
+
+  <section id="about">
+    <h2>About Me</h2>
+    <p>I’m a backend developer who loves building scalable APIs, secure systems, and reliable automation. I’ve worked with microservices, RESTful APIs, databases, and more.</p>
+  </section>
+
+  <div id="modal" class="modal" onclick="closeModal()">
+    <div class="modal-content" onclick="event.stopPropagation()">
+      <span class="close" onclick="closeModal()">&times;</span>
+      <p id="modal-text"></p>
+    </div>
+  </div>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Ayush Singh</p>
+  </footer>
+  <script src="script.js"></script>
+</body>
+</html>
